--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "3"
-members = ["adventure_00", "adventure_01", "adventure_02", "adventure_03"]
+members = ["adventure_00", "adventure_01", "adventure_02", "adventure_03", "adventure_04"]
